Fix various typos found by Lintian

--- a/doc/gen/libsolv-bindings.3
+++ b/doc/gen/libsolv-bindings.3
@@ -614,7 +614,7 @@ Make the addfileprovides method only add files from the standard locations (i\&.
 .PP
 \fBPOOL_FLAG_NOWHATPROVIDESAUX\fR
 .RS 4
-Disable the creation of the auxillary whatprovides index\&. This saves a bit of memory but also makes the whatprovides lookups a bit slower\&.
+Disable the creation of the auxiliary whatprovides index\&. This saves a bit of memory but also makes the whatprovides lookups a bit slower\&.
 .RE
 .PP
 \fBPOOL_FLAG_WHATPROVIDESWITHDISABLED\fR
@@ -2159,7 +2159,7 @@ Add the metadata of a single rpm package to the repository\&.
 .RE
 .\}
 .sp
-Add all pubkeys contained in the rpm database to the repository\&. Note that newer rpm versions also allow to store the pubkeys in some directory instead of the rpm database\&.
+Add all pubkeys contained in the rpm database to the repository\&. Note that newer rpm versions also allow storing the pubkeys in some directory instead of the rpm database\&.
 .sp
 .if n \{\
 .RS 4
@@ -3609,7 +3609,7 @@ Update the matching installed packages to their best version\&. If none of the s
 .PP
 \fBSOLVER_WEAKENDEPS\fR
 .RS 4
-Allow to break the dependencies of the matching packages\&. Handle with care\&.
+Allow breaking the dependencies of the matching packages\&. Handle with care\&.
 .RE
 .PP
 \fBSOLVER_MULTIVERSION\fR
@@ -4513,7 +4513,7 @@ my \fI@decisions\fR \fB=\fR \fI$problem\fR\fB\->get_decisionlist()\fR;
 .RE
 .\}
 .sp
-Return a list of decisions prooving the problem\&. This is somewhat similar to the findallproblemrules(), but the output is in an order that makes it easier to understand why the solver could not find a solution\&.
+Return a list of decisions proving the problem\&. This is somewhat similar to the findallproblemrules(), but the output is in an order that makes it easier to understand why the solver could not find a solution\&.
 .sp
 .if n \{\
 .RS 4
@@ -4683,7 +4683,7 @@ my \fI@decisions\fR \fB=\fR \fI$rule\fR\fB\->get_decisionlist()\fR;
 .RE
 .\}
 .sp
-Return a list of decisions prooving a learnt rule\&.
+Return a list of decisions proving a learnt rule\&.
 .sp
 .if n \{\
 .RS 4
