--- a/doc/gen/testsolv.1
+++ b/doc/gen/testsolv.1
@@ -45,7 +45,7 @@ Increase the debug level of the solver\&. This option can be specified multiple 
 .RS 4
 Write the output in testcase format instead of human readable text\&. The output can then be used in the result section of the test case\&. If the
 \fB\-r\fR
-option is given twice, the output is formated for verbatim inclusion\&.
+option is given twice, the output is formatted for verbatim inclusion\&.
 .RE
 .PP
 \fB\-l\fR \fIPKGSPEC\fR
