--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 
 This file contains the major changes between libsolv versions:
 
+Version 0.7.28
+- selected bug fixes:
+  * disable choice rules for Conda
+  * build for multiple python versions on SUSE
+
 Version 0.7.27
 - selected bug fixes:
   * add zstd support for the installcheck tool
