Add a package/repo parser for apk
You need to configure with ENABLE_APK to get them.

Note that we currently only support the v2 format. We'll add
v3 support if somebody uses it in the future.

--- a/README
+++ b/README
@@ -24,6 +24,7 @@ Supported package formats:
   - deb
   - arch linux
   - haiku
+  - apk 
 
 Supported repository formats:
 
@@ -33,6 +34,7 @@ Supported repository formats:
   - arch linux
   - red carpet helix format
   - haiku
+  - apk 
 
 Build instructions
 ==================
